--- a/src/components/DeviceDashboard.scss
+++ b/src/components/DeviceDashboard.scss
@@ -1,18 +1,22 @@
-.HotDevicesPanel {
-  padding: 0px 10px 0px 0px;
-  .panel-body {
-    padding: 0px; // Make table fit flush inside the panel
-  }
+.DeviceDashboard {
 }
 
-// Show pencil icon when hovering on owner field
-.HotDevicesPanel__owner {
-  cursor: default;
+#changeOwnerModal .modal-body input {
+  padding: 5px;
+  width: 100%;
 }
-.HotDevicesPanel__owner .show-on-hover {
+// Show pencil icon when hovering on owner field
+.DevicesDashboard__table .owner {
+  cursor: default;
+  .show-on-hover {
+    display: none;
+    float: right;
+  }
+}
+.DevicesDashboard__table .owner .show-on-hover {
   display: none;
   float: right;
 }
-.HotDevicesPanel__owner:hover .show-on-hover {
+.DevicesDashboard__table .owner:hover .show-on-hover {
   display: inline;
 }
